--- a/samples/EMDecouplingSample/src/main/java/com/mlg/acciones/presentation/forms/AddCompany.form
+++ b/samples/EMDecouplingSample/src/main/java/com/mlg/acciones/presentation/forms/AddCompany.form
@@ -74,7 +74,7 @@
                   <Component id="jScrollPane1" min="-2" pref="148" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="264" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
